--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,7 +7,8 @@
 
 nav {
    
-    background-color: steelblue; padding: 10px;
+    background-color: steelblue;
+     padding: 10px;
 }
 
 nav a { color: white;
@@ -18,22 +19,26 @@ nav a { color: white;
 
 h1 {
     color: steelblue;
+    padding: .5rem ;
  }
+
+main {
+    max-width: 640px;
+}
 
  main img {
     width: 150px;
     height: auto;
     border: 1px solid steelblue;
-    padding: 2px;
+    padding: 1px;
     box-shadow: 0 0 30px gray;
     float:right;
     margin:0;
+    
 
  }
 
- p {
-    padding: 10px;
- }
+
 
  aside{
     width:30em;
