--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,8 +1,3 @@
-* {
-    margin:0;
-    padding:0;
-    box-sizing: border-box;
-}
 
 
 nav {
@@ -22,11 +17,13 @@ h1 {
     padding: .5rem ;
  }
 
+ p {
+    max-width: 400px;
+ }
 main {
-    max-width: 640px;
+    max-width:640px
 }
-
- main img {
+main img {
     width: 150px;
     height: auto;
     border: 1px solid steelblue;
