--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,10 +1,40 @@
 
+header, .grid,  footer {
+    max-width: 840px;
+    margin: 0 auto;
+}
+
+ .grid { 
+    display: grid;
+
+    align-items:center;
+}
+
+main {
+    grid-column: 2/3;
+    margin: 1rem;
+
+}
+
+
+aside{
+    width: 20em;
+    position: relative;
+    grid-column: 1/2;
+    grid-row: 1/2;
+ }
+
+
 
 nav {
-   
     background-color: steelblue;
-     padding: 10px;
+     padding: 1rem;
+     display:flex;
+     justify-content: space-evenly;
+     align-items: center;
+
 }
+
 
 nav a { color: white;
     display: block;
@@ -13,16 +43,12 @@ nav a { color: white;
 }
 
 h1 {
-    color: steelblue;
+    color: hsl(207, 44%, 49%);
     padding: .5rem ;
+    border-bottom: 2px solid hsl(207, 44%, 49%)
  }
 
- p {
-    max-width: 400px;
- }
-main {
-    max-width:640px
-}
+
 main img {
     width: 150px;
     height: auto;
@@ -30,18 +56,12 @@ main img {
     padding: 1px;
     box-shadow: 0 0 30px gray;
     float:right;
-    margin:0;
+    margin:4px;
     
 
  }
 
 
-
- aside{
-    width:30em;
-    position: relative;
-    text-align: center;
- }
 
 aside img {
     width:300px;
@@ -51,16 +71,17 @@ aside img {
 
 aside h2{
     position:absolute;
-    left: 100px;
-    top:150px;
+    left: 25px;
+    top:135px;
     color:#342905
 
 }
 
 footer {
-    margin:1em;
     border-top:2px solid #000;
     text-align:center;
+    
+
 }
 
 
@@ -69,9 +90,9 @@ footer {
  /* Calss Selectors*/
 
  .box{
-    margin:1rem;
-    border:2px solid rgb(59, 40, 40,);
-    padding:1rem;
+    margin: 0 auto;
+    border:1px solid rgb(59, 40, 40);
+    padding:25px;
     background-color: beige;
     color:rgb(122, 75, 14);
  }
