--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,63 +1,180 @@
-
-@font-face {
-    font-family : 'Roboto';
-    font-style : normal;
-    font-weight : 400;
-    font-display : swap;
-    src : url(https://fonts.gstatic.com/s/roboto/v30/KFOmCnqEu92Fr1Mu72xKKTU1Kvnz.woff2) format('woff2');
-    unicode-range : U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
-    }
- 
-
-
-.roboto-regular {
-    font-family: "Roboto", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-  }
-
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 :root { background-color: #FBF5EF;
     color:#DEAD7C ;
     color:rgb(115, 55, 18);
-    
+   
   }
 
-h1 {
-    font-size:25px;
-    position:absolute;
-    bottom:150px;
-    left:5px;
-    color:rgb(66, 100, 157);
-    background-color: rgb(231, 197, 177, 50%);
-    padding:5px;
+header {
+    display: grid;
+    grid-template-columns: 250px 60% ;
+    align-items: center;
+    max-width: 1000px;
+   
+
 }
 
-h2 {
-    color: #DEAD7C;
-    font-family: "Roboto", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size:20px;
+nav {
+    display:flex;
+    justify-content: space-between;
+    margin-right: 20px;
+   
+}
+
+.logo {
+    margin-left:20px;
+    margin-bottom: 10px;
+}
+
+
+
+
+h1 {
+    font: size 30px;
+    position:absolute;
+    color:rgb(255, 255, 255);
+    background-color: rgba(0, 0, 0, 0.5);
+    
+    left:0px;
+    right:0px;
+    top:0px;
+    text-align: center;
+}
+
+
+.hero {
+    position:relative;
+  
 }
 
 
 .hero img { 
-    display: block;
+    display: flex;
     width: 100%;
     height: auto;
-    
-}
 
-#img1 {
-  max-width:100px;
- float: right;
    
 }
 
-.hero {
-    position:relative;
+article {
+    color:aliceblue;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding-bottom: 40px;
+    padding-top:10px;
+    padding-left:10px;
+    padding-right:10px;
+    position: absolute;
+    left:0;
+    right:0;
+    bottom:10px;
+    top:90px;
+    padding-left:50px
+
+
+
+
+  
 }
 
 
- 
+
+
+
+#img1 {
+  width: 150px;
+  height:auto;
+  float:right;
+  padding-right:50px;
+  
+
+}
+
+
+
+section {
+    display:flex;
+    align-items:center;
+    height:80vh;
+    justify-content: center;
+    bottom:px;
+
+}
+
+.container {
+    display:grid;
+    grid-template-columns:repeat(5,1fr);
+    grid-template-rows: repeat(2, auto);
+    gap: 10px;
+}
+
+.container img {
+    width: 150px;
+    height: 150px;
+    object-fit:cover;
+    grid-row-start: 2;
+    justify-content:center;
+    padding-top:10px;
+}
+.container h2 {
+    color: #DEAD7C;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size:30px;
+    display: flex;
+    justify-content:center;
+    grid-column-start: 2;
+    grid-column-end:  5;
+    align-items:center;
+    padding-top:50px;
+  
+}
+
+
+.section1 {
+    display:flex;
+    justify-content:center;
+    height:1vh;
+    align-items:auto;
+    
+
+}
+
+.first_container{
+    display:grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 2;
+    gap: 5px;
+    justify-content: center;;
+}
+
+.first_container h2{
+    color: #DEAD7C;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size:30px;
+    display: flex;
+    justify-content:center;
+    grid-column: span 1 / 3;
+   
+
+}
+
+.first_container p {
+    grid-column: 1/4;
+}
+
+footer {
+    display:flex;
+    justify-content:center;
+
+}
+
+.icons{
+    display:flex;
+    align-items:center;
+    position:absolute;
+    bottom:-150px;
+    right:10px;
+}
