--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,4 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@font-face {
+    font-family : 'Roboto';
+    font-style : normal;
+    font-weight : 400;
+    font-display : swap;
+    src : url(https://fonts.gstatic.com/s/roboto/v30/KFOmCnqEu92Fr1Mu5mxKKTU1Kvnz.woff2) format('woff2');
+    unicode-range : U+0301, U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+   
+}
+
 :root { background-color: #FBF5EF;
     color:#DEAD7C ;
     color:rgb(115, 55, 18);
@@ -34,11 +43,10 @@ nav {
 
 
 h1 {
-    font: size 30px;
+    font-size: 30px;
     position:absolute;
     color:rgb(255, 255, 255);
     background-color: rgba(0, 0, 0, 0.5);
-    
     left:0px;
     right:0px;
     top:0px;
@@ -65,13 +73,12 @@ article {
     color:aliceblue;
     background-color: rgba(0, 0, 0, 0.5);
     padding-bottom: 50px;
-    padding-top:25px;
     padding-left:10px;
     padding-right:10px;
     position: absolute;
     left:60px;
     right:60px;
-    bottom:60px;
+    bottom:30px;
     top:100px;
     padding-left:50px
 
@@ -98,7 +105,7 @@ article {
 
 
 
-section {
+.part2 {
     display:flex;
     align-items:center;
     height:100vh;
@@ -139,16 +146,13 @@ section {
 .section1 {
     display:flex;
     justify-content:center;
-    height:1vh;
-    align-items:auto;
-    
-
+    height:1vh; 
 }
 
 .first_container{
     display:grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 2;
+    grid-template-rows:2fr;
     gap: 5px;
     justify-content: center;;
 }
